added basic configuration for compiler and wrapper